# Search-Engine

./: .gitignore  Answers.md  AvlTree.h  CMakeLists.txt  DSAvlTree.h  DSDocument.cpp  DSDocument.h  DocumentParser.cpp  DocumentParser.h  Hash.h  IndexHandler.cpp  IndexHandler.h  Project_Instructions.docx  QueryProcessor.cpp  QueryProcessor.h  README.md  SearchEngine.cpp  SearchEngine.h  UserInterface.cpp  UserInterface.h  document.cpp  document.h  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  rapidJSONExample.cpp  testDocumentParser.cpp  test_AvlTree.cpp  test_DSAvlTree.cpp  test_DSHash.cpp  test_IndexHandler.cpp  test_QueryProcessor.cpp  test_QueryProcessor.h
